%% Domínio: Território e Prioridade - SUS-Connect APS MVP (Fase 05)

classDiagram
    class Territory {
        +UUID id
        +String code
        +String name
        +String unitName
        +BigDecimal linkedPopulationPercent
        +YearMonth dataCompetence
        +List~PreventiveIndicator~ indicators
        +create(code, name, ...) Territory$
        +reconstruct(id, ...) Territory$
        +withIndicators(...) Territory
    }

    class PreventiveIndicator {
        <<record>>
        +PreventiveFocus focus
        +BigDecimal score
        +BigDecimal target
        +isBelowTarget() boolean
    }

    class PreventiveFocus {
        <<enum>>
        CHRONIC_CONDITIONS
        PRENATAL
        CHILD_VACCINATION
        CYTOPATHOLOGY
        +label() String
    }

    class PriorityCalculator {
        -BigDecimal linkageTarget
        +assess(Territory) PriorityAssessment
    }

    class PriorityAssessment {
        +PriorityLevel level
        +BigDecimal linkageTarget
        +List~String~ reasons
        +List~PreventiveIndicator~ belowTargetIndicators
    }

    class PriorityLevel {
        <<enum>>
        HIGH
        MEDIUM
        LOW
    }

    Territory "1" *-- "1..*" PreventiveIndicator : contém
    PreventiveIndicator --> PreventiveFocus : foco
    PriorityCalculator ..> Territory : avalia
    PriorityCalculator --> PriorityAssessment : produz
    PriorityAssessment --> PriorityLevel : classifica como
    PriorityAssessment o-- PreventiveIndicator : indicadores abaixo da meta
